--- a/FlexboxEmCss/0-justify-content.html
+++ b/FlexboxEmCss/0-justify-content.html
@@ -17,6 +17,7 @@
             margin: 5px;
             text-align: center;
             color: white;
+            width: auto;
         }
         .flex-start{
             justify-content: flex-start;
