--- a/Página_inicial_Instagram_web/index.html
+++ b/Página_inicial_Instagram_web/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recriando a página inicial do instragam web com flexbox em css.</title>
-</head>
+<html>
 <body>
-    
+    <p id="demo"></p>
+    <script>
+        let text ="Daniel"
+        var x = document.getElementById("demo").innerHTML = text.length;
+        console.log(x);
+    </script>
 </body>
 </html>
